<resources>
    <string name="app_name" translatable="false">MYLES</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">register</string>
    <string name="es" translatable="false">ES</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat password</string>
    <string name="browse">Browse</string>
    <string name="add">Add</string>
    <string name="likes" translatable="false">Likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_main_navigation" translatable="false">MainNavigation</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="me_gusta" translatable="false">Me gusta</string>
    <string name="welcome_to_myles" translatable="false">Welcome to MYLES!</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="mapa" translatable="false">Mapa</string>
    <string name="home">Home</string>
    <string name="none" translatable="false" />
    <string name="eventos" translatable="false">Eventos</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="type_your_username_here">Type your username here</string>
</resources>